限制重定向规则，取消*通配符

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "description": "A replacer for google fonts/api/themes.... to load page faster!",
   "permissions": [
       "webRequest", "webRequestBlocking",
-      "*://*.googleapis.com/*",
+      "*://ajax.googleapis.com/*",
+      "*://fonts.googleapis.com/*",
       "*://themes.googleusercontent.com/*",
       "*://fonts.gstatic.com/*"
   ],
