--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "gooreplacer",
-  "version": "0.4",
+  "version": "0.5",
   "description": "A replacer for google fonts/api/themes.... to load page faster!",
   "permissions": [
       "webRequest", "webRequestBlocking",
@@ -9,7 +9,7 @@
       "https://*/*"
   ],
   "background": {
-    "scripts": [ "db.js" ,"background.js", "popup.js"]
+    "scripts": [ "data/js/db.js" ,"background.js", "popup.js"]
   },
   "icons": {
     "32": "data/img/gooreplacer.ico",
