--- a/cljs-src/resources/manifest.json
+++ b/cljs-src/resources/manifest.json
@@ -25,7 +25,11 @@
     },
     "default_title": "Modify, block URLs & Headers"
   },
-  "options_page": "option/index.html",
+  "options_ui": {
+    "page": "option/index.html",
+    "chrome_style": false,
+    "open_in_tab": true
+  },
   "author": "http://liujiacai.net",
   "homepage_url": "https://github.com/jiacai2050/gooreplacer4chrome",
   "content_security_policy": "default-src 'unsafe-eval' 'self'; style-src http://* https://* 'unsafe-inline' 'unsafe-eval'; connect-src http://* ws://localhost:* ; font-src https://* ",
