--- a/cljs-src/resources/manifest.json
+++ b/cljs-src/resources/manifest.json
@@ -23,7 +23,7 @@
       "16": "option/img/16.png",
       "48": "option/img/48.png"
     },
-    "default_title": "Modify, block URLs & Headers"
+    "default_title": "__MSG_appDesc__"
   },
   "options_ui": {
     "page": "option/index.html",
@@ -32,6 +32,6 @@
   },
   "author": "http://liujiacai.net",
   "homepage_url": "https://github.com/jiacai2050/gooreplacer",
-  "content_security_policy": "default-src 'unsafe-eval' 'self' http://localhost:8097; style-src http://* https://* 'unsafe-inline' 'unsafe-eval'; connect-src http://* http://localhost:* ws://localhost:* ; font-src https://*",
+  "content_security_policy": "default-src 'self'; style-src https://* 'unsafe-inline'; font-src https://* ",
   "manifest_version": 2
 }
