--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: clojure
 jdk:
   - oraclejdk8
 before_install:
-  - sudo apt-get install -y nodejs
+  - sudo apt-get install -y nodejs npm
   - sudo npm install jsonlint -g
 
 script:
