--- a/cljs-src/resources/manifest.json
+++ b/cljs-src/resources/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "gooreplacer",
-  "version": "3.10.0",
-  "description": "Redirect, block Requests; Modify, cancel request/response Headers",
+  "name": "__MSG_appName__",
+  "version": "3.11.0",
+  "description": "__MSG_appDesc__",
+  "default_locale": "en",
   "permissions": [
     "webRequest", "webRequestBlocking",
     "downloads",
@@ -31,6 +32,6 @@
   },
   "author": "http://liujiacai.net",
   "homepage_url": "https://github.com/jiacai2050/gooreplacer",
-  "content_security_policy": "default-src 'unsafe-eval' 'self'; style-src http://* https://* 'unsafe-inline' 'unsafe-eval'; connect-src http://* http://localhost:* ws://localhost:* ; font-src https://* ",
+  "content_security_policy": "default-src 'unsafe-eval' 'self' http://localhost:8097; style-src http://* https://* 'unsafe-inline' 'unsafe-eval'; connect-src http://* http://localhost:* ws://localhost:* ; font-src https://*",
   "manifest_version": 2
 }
