--- a/cljs-src/resources/manifest.json
+++ b/cljs-src/resources/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "__MSG_appName__",
-  "version": "3.13.1",
+  "version": "3.13.2",
   "description": "__MSG_appDesc__",
   "default_locale": "en",
   "permissions": [
-    "webRequest", "webRequestBlocking",
+    "webRequest",
+    "webRequestBlocking",
     "downloads",
     "http://*/*",
     "https://*/*"
